--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
 		"gulp-uglify-es": "latest",
 		"gulp-webp-html": "latest",
 		"gulp-webpcss": "latest",
-		"imagemin-webp": "latest",
+		"imagemin-webp": "6.0.0",
 		"transform-runtime": "0.0.0",
 		"webp-converter": "2.2.3",
-		"gulp-imagemin": "latest",
+		"gulp-imagemin": "7.1.0",
 		"gulp-newer": "latest",
 		"gulp-plumber": "latest",
 		"gulp-rename": "latest",
